syntax = "proto3";
package wapp.account;

option go_package = "github.com/dark-vinci/wapp/backend/sdk/grpc/account";

import "account/request.proto";
import "account/response.proto";

service Account {
  rpc Ping(PingRequest) returns (PingResponse) {}
  rpc CreateUserAccount(CreateUserRequest) returns (CreateUserResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
}
